feat: orderby node rfc (#160)
* feat: order by node rfc
* feat: add GeOrderExpression and GetOrderExpressionExpr method

--- a/cases/integration/cluster/window_and_lastjoin.yaml
+++ b/cases/integration/cluster/window_and_lastjoin.yaml
@@ -301,22 +301,22 @@ cases:
             REQUEST_JOIN(type=LastJoin, condition=, left_keys=(out1_id), right_keys=(out2_id), index_keys=)
               RENAME(name=out1)
                 PROJECT(type=Aggregation)
-                  REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                  REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                     DATA_PROVIDER(request=auto_t0)
                     DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
               RENAME(name=out2)
                 PROJECT(type=Aggregation)
-                  REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c2))
+                  REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c2))
                     DATA_PROVIDER(request=auto_t0)
                     DATA_PROVIDER(type=Partition, table=auto_t0, index=index2)
             RENAME(name=out3)
               PROJECT(type=Aggregation)
-                REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c3))
+                REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c3))
                   DATA_PROVIDER(request=auto_t0)
                   DATA_PROVIDER(type=Partition, table=auto_t0, index=index3)
           RENAME(name=out4)
             PROJECT(type=Aggregation)
-              REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c4))
+              REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c4))
                 DATA_PROVIDER(request=auto_t0)
                 DATA_PROVIDER(type=Partition, table=auto_t0, index=index4)
 
@@ -331,7 +331,7 @@ cases:
                     SIMPLE_PROJECT(sources=(id -> out1_id, c1))
                       DATA_PROVIDER(request=auto_t0)
                     PROJECT(type=Aggregation)
-                      REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                      REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                         DATA_PROVIDER(request=auto_t0)
                         DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
               RENAME(name=out2)
@@ -340,7 +340,7 @@ cases:
                     SIMPLE_PROJECT(sources=(id -> out2_id, c2))
                       DATA_PROVIDER(request=auto_t0)
                     PROJECT(type=Aggregation)
-                      REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c2))
+                      REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c2))
                         DATA_PROVIDER(request=auto_t0)
                         DATA_PROVIDER(type=Partition, table=auto_t0, index=index2)
             RENAME(name=out3)
@@ -349,7 +349,7 @@ cases:
                   SIMPLE_PROJECT(sources=(id -> out3_id, c3))
                     DATA_PROVIDER(request=auto_t0)
                   PROJECT(type=Aggregation)
-                    REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c3))
+                    REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c3))
                       DATA_PROVIDER(request=auto_t0)
                       DATA_PROVIDER(type=Partition, table=auto_t0, index=index3)
           RENAME(name=out4)
@@ -358,7 +358,7 @@ cases:
                 SIMPLE_PROJECT(sources=(id -> out4_id, c4))
                   DATA_PROVIDER(request=auto_t0)
                 PROJECT(type=Aggregation)
-                  REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c4))
+                  REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c4))
                     DATA_PROVIDER(request=auto_t0)
                     DATA_PROVIDER(type=Partition, table=auto_t0, index=index4)
     expect:
@@ -430,13 +430,13 @@ cases:
         last join {1} as t4 order by t4.x7 on c4 = t4.x4 and c7 - 4000 >= t4.x7;
     request_plan: |
       SIMPLE_PROJECT(sources=(id, c1, c2, c3, c4, c6, c7, cur_hour, today, w1_sum_c6, w1_max_c6, w1_min_c6, w1_avg_c6, w1_cnt_c6, t1.rid -> t1_rid, t2.rid -> t2_rid, t3.rid -> t3_rid, t4.rid -> t4_rid))
-        REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 4000 >= t4.x7, left_keys=(), right_keys=(), index_keys=(c4))
-          REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 3000 >= t3.x7, left_keys=(), right_keys=(), index_keys=(c3))
-            REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 2000 >= t2.x7, left_keys=(), right_keys=(), index_keys=(c2))
-              REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 1000 >= t1.x7, left_keys=(), right_keys=(), index_keys=(c1))
+        REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 4000 >= t4.x7, left_keys=(), right_keys=(), index_keys=(c4))
+          REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 3000 >= t3.x7, left_keys=(), right_keys=(), index_keys=(c3))
+            REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 2000 >= t2.x7, left_keys=(), right_keys=(), index_keys=(c2))
+              REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 1000 >= t1.x7, left_keys=(), right_keys=(), index_keys=(c1))
                 RENAME(name=w_out)
                   PROJECT(type=Aggregation)
-                    REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                    REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                       DATA_PROVIDER(request=auto_t0)
                       DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
                 RENAME(name=t1)
@@ -459,25 +459,25 @@ cases:
                       PROJECT(type=RowProject)
                         DATA_PROVIDER(request=auto_t0)
                       PROJECT(type=Aggregation)
-                        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                        REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                           DATA_PROVIDER(request=auto_t0)
                           DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
-                REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 1000 >= #35, left_keys=(), right_keys=(), index_keys=(#9))
+                REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 1000 >= #35, left_keys=(), right_keys=(), index_keys=(#9))
                   SIMPLE_PROJECT(sources=(#9 -> c1, #14 -> c7))
                     DATA_PROVIDER(request=auto_t0)
                   RENAME(name=t1)
                     DATA_PROVIDER(type=Partition, table=auto_t1, index=index1)
-              REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 2000 >= #35, left_keys=(), right_keys=(), index_keys=(#10))
+              REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 2000 >= #35, left_keys=(), right_keys=(), index_keys=(#10))
                 SIMPLE_PROJECT(sources=(#10 -> c2, #14 -> c7))
                   DATA_PROVIDER(request=auto_t0)
                 RENAME(name=t2)
                   DATA_PROVIDER(type=Partition, table=auto_t1, index=index2)
-            REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 3000 >= #35, left_keys=(), right_keys=(), index_keys=(#11))
+            REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 3000 >= #35, left_keys=(), right_keys=(), index_keys=(#11))
               SIMPLE_PROJECT(sources=(#11 -> c3, #14 -> c7))
                 DATA_PROVIDER(request=auto_t0)
               RENAME(name=t3)
                 DATA_PROVIDER(type=Partition, table=auto_t1, index=index3)
-          REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 4000 >= #35, left_keys=(), right_keys=(), index_keys=(#12))
+          REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 4000 >= #35, left_keys=(), right_keys=(), index_keys=(#12))
             SIMPLE_PROJECT(sources=(#12 -> c4, #14 -> c7))
               DATA_PROVIDER(request=auto_t0)
             RENAME(name=t4)
@@ -553,13 +553,13 @@ cases:
         last join {1} as t4 order by t4.x7 on w_out.c4 = t4.x4 and c7 - 4000 >= t4.x7;
     request_plan: |
       SIMPLE_PROJECT(sources=(id, c1, c2, c3, c4, c6, c7, cur_hour, today, w1_sum_c6, w1_max_c6, w1_min_c6, w1_avg_c6, w1_cnt_c6, t1.rid -> t1_rid, t2.rid -> t2_rid, t3.rid -> t3_rid, t4.rid -> t4_rid))
-        REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 4000 >= t4.x7, left_keys=(), right_keys=(), index_keys=(w_out.c4))
-          REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 3000 >= t3.x7, left_keys=(), right_keys=(), index_keys=(w_out.c3))
-            REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 2000 >= t2.x7, left_keys=(), right_keys=(), index_keys=(w_out.c2))
-              REQUEST_JOIN(type=LastJoin, right_sort=() ASC, condition=c7 - 1000 >= t1.x7, left_keys=(), right_keys=(), index_keys=(c1))
+        REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 4000 >= t4.x7, left_keys=(), right_keys=(), index_keys=(w_out.c4))
+          REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 3000 >= t3.x7, left_keys=(), right_keys=(), index_keys=(w_out.c3))
+            REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 2000 >= t2.x7, left_keys=(), right_keys=(), index_keys=(w_out.c2))
+              REQUEST_JOIN(type=LastJoin, right_sort=(ASC), condition=c7 - 1000 >= t1.x7, left_keys=(), right_keys=(), index_keys=(c1))
                 RENAME(name=w_out)
                   PROJECT(type=Aggregation)
-                    REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                    REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                       DATA_PROVIDER(request=auto_t0)
                       DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
                 RENAME(name=t1)
@@ -582,25 +582,25 @@ cases:
                       PROJECT(type=RowProject)
                         DATA_PROVIDER(request=auto_t0)
                       PROJECT(type=Aggregation)
-                        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
+                        REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -864000000, 0), index_keys=(auto_t0.c1))
                           DATA_PROVIDER(request=auto_t0)
                           DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
-                REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 1000 >= #35, left_keys=(), right_keys=(), index_keys=(#9))
+                REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 1000 >= #35, left_keys=(), right_keys=(), index_keys=(#9))
                   SIMPLE_PROJECT(sources=(#9 -> c1, #14 -> c7))
                     DATA_PROVIDER(request=auto_t0)
                   RENAME(name=t1)
                     DATA_PROVIDER(type=Partition, table=auto_t1, index=index1)
-              REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 2000 >= #35, left_keys=(), right_keys=(), index_keys=(#10))
+              REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 2000 >= #35, left_keys=(), right_keys=(), index_keys=(#10))
                 SIMPLE_PROJECT(sources=(#10 -> w_out.c2, #14 -> c7))
                   DATA_PROVIDER(request=auto_t0)
                 RENAME(name=t2)
                   DATA_PROVIDER(type=Partition, table=auto_t1, index=index2)
-            REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 3000 >= #35, left_keys=(), right_keys=(), index_keys=(#11))
+            REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 3000 >= #35, left_keys=(), right_keys=(), index_keys=(#11))
               SIMPLE_PROJECT(sources=(#11 -> w_out.c3, #14 -> c7))
                 DATA_PROVIDER(request=auto_t0)
               RENAME(name=t3)
                 DATA_PROVIDER(type=Partition, table=auto_t1, index=index3)
-          REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=() ASC, condition=#14 - 4000 >= #35, left_keys=(), right_keys=(), index_keys=(#12))
+          REQUEST_JOIN(OUTPUT_RIGHT_ONLY, type=LastJoin, right_sort=(ASC), condition=#14 - 4000 >= #35, left_keys=(), right_keys=(), index_keys=(#12))
             SIMPLE_PROJECT(sources=(#12 -> w_out.c4, #14 -> c7))
               DATA_PROVIDER(request=auto_t0)
             RENAME(name=t4)
