--- a/cases/query/window_with_union_query.yaml
+++ b/cases/query/window_with_union_query.yaml
@@ -186,16 +186,16 @@ cases:
     batch_plan: |
       LIMIT(limit=10, optimized)
         PROJECT(type=WindowAggregation, limit=10)
-          +-WINDOW(partition_keys=(), orders=() ASC, range=(col5, -2, 0))
-          +-UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0))
+          +-WINDOW(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
+          +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
               SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
                 DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
           DATA_PROVIDER(type=Partition, table=t1, index=index_col25)
     request_plan: |
       LIMIT(limit=10, optimized)
         PROJECT(type=Aggregation, limit=10)
-          REQUEST_UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0), index_keys=(col2))
-            +-UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0), index_keys=(col2))
+          REQUEST_UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
+            +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
                 SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
                   DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
             DATA_PROVIDER(request=t1)
@@ -243,8 +243,8 @@ cases:
     batch_plan: |
       LIMIT(limit=10, optimized)
         PROJECT(type=WindowAggregation, limit=10)
-          +-WINDOW(partition_keys=(), orders=() ASC, range=(col5, -2, 0))
-          +-UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0))
+          +-WINDOW(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
+          +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
               SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
                 DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
           SIMPLE_PROJECT(sources=(tx_col0 -> col0, x1 -> col1, x2 -> col2, x3 -> col3, x4 -> col4, x5 -> col5, x6 -> col6))
@@ -252,8 +252,8 @@ cases:
     request_plan: |
       LIMIT(limit=10, optimized)
         PROJECT(type=Aggregation, limit=10)
-          REQUEST_UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0), index_keys=(col2))
-            +-UNION(partition_keys=(), orders=() ASC, range=(col5, -2, 0), index_keys=(col2))
+          REQUEST_UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
+            +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
                 SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
                   DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
             SIMPLE_PROJECT(sources=(tx_col0 -> col0, x1 -> col1, x2 -> col2, x3 -> col3, x4 -> col4, x5 -> col5, x6 -> col6))
