--- a/cases/integration/v1/window/test_window_row_range.yaml
+++ b/cases/integration/v1/window/test_window_row_range.yaml
@@ -730,13 +730,13 @@ cases:
           - [ "aa",9, 1.0, 1590739002000 ]
     request_plan: |
       PROJECT(type=Aggregation)
-        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, -1000, maxsize=2), index_keys=(auto_t0.c1))
+        REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, -1000, maxsize=2), index_keys=(auto_t0.c1))
           DATA_PROVIDER(request=auto_t0)
           DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
 
     batch_plan: |
       PROJECT(type=WindowAggregation)
-        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, -1000, maxsize=2))
+        +-WINDOW(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, -1000, maxsize=2))
         DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     sql: |
       SELECT c1, c3, c7,
@@ -780,12 +780,12 @@ cases:
       w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW MAXSIZE 4);
     request_plan: |
       PROJECT(type=Aggregation)
-        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=4), index_keys=(auto_t0.c1))
+        REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, 0, maxsize=4), index_keys=(auto_t0.c1))
           DATA_PROVIDER(request=auto_t0)
           DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     batch_plan: |
       PROJECT(type=WindowAggregation)
-        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=4))
+        +-WINDOW(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, 0, maxsize=4))
         DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     expect:
       order: c3
@@ -827,11 +827,11 @@ cases:
       SIMPLE_PROJECT(sources=(c1, c3, c7, w1_c4_sum, w2_c4_sum))
         REQUEST_JOIN(type=kJoinTypeConcat)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, 0), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -3000, 0, maxsize=2), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -3000, 0, maxsize=2), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
 
@@ -873,12 +873,12 @@ cases:
       w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 6s PRECEDING AND CURRENT ROW MAXSIZE 5);
     request_plan: |
       PROJECT(type=Aggregation)
-        REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
+        REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
           DATA_PROVIDER(request=auto_t0)
           DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     batch_plan: |
       PROJECT(type=WindowAggregation)
-        +-WINDOW(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0))
+        +-WINDOW(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -6000, 0, maxsize=5), rows=(auto_t0.c7, -3, 0))
         DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     expect:
       order: c3
@@ -920,11 +920,11 @@ cases:
       SIMPLE_PROJECT(sources=(c1, c3, c7, w1_c4_sum, w2_c4_sum))
         REQUEST_JOIN(type=kJoinTypeConcat)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, rows=(auto_t0.c7, -7, 0), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), rows=(auto_t0.c7, -7, 0), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, 0, maxsize=5), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -6000, 0, maxsize=5), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
     expect:
@@ -968,11 +968,11 @@ cases:
       SIMPLE_PROJECT(sources=(c1, c3, c7, w1_c4_sum, w2_c4_sum))
         REQUEST_JOIN(type=kJoinTypeConcat)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
           PROJECT(type=Aggregation)
-            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, -2000), index_keys=(auto_t0.c1))
+            REQUEST_UNION(partition_keys=(), orders=(ASC), range=(auto_t0.c7, -6000, -2000), index_keys=(auto_t0.c1))
               DATA_PROVIDER(request=auto_t0)
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
 
