--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -332,6 +332,12 @@
 			<version>2.7.4</version>
 		</dependency>
 
+		<!-- Iceberg -->
+		<dependency>
+			<groupId>org.apache.iceberg</groupId>
+			<artifactId>iceberg-spark3-runtime</artifactId>
+			<version>0.11.1</version>
+		</dependency>
 
 	</dependencies>
 
