--- a/java/openmldb-jdbc/pom.xml
+++ b/java/openmldb-jdbc/pom.xml
@@ -41,6 +41,11 @@
             <version>0.2.0</version>
         </dependency>
         <dependency>
+            <groupId>com.4paradigm.hybridse</groupId>
+            <artifactId>hybridse-sdk</artifactId>
+            <version>0.2.0-llvm</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.13.2</version>
