Squashed commit of the following: (#165)
commit 30ed448d92bad992ddba0c9b9fb646b8050c2fc6
Author: aceforeverd <teapot@aceforeverd.com>
Date:   Fri Jul 16 13:03:48 2021 +0800

    fix coverage

commit f49f5ad3e0f13212d0bc96d3ca379a50d3db46d2
Author: aceforeverd <teapot@aceforeverd.com>
Date:   Fri Jul 16 11:17:11 2021 +0800

    fix

commit 4ea3f0ebefc93419b84274e1b43229fa29c01025
Author: aceforeverd <teapot@aceforeverd.com>
Date:   Fri Jul 16 10:14:56 2021 +0800

    ci: support java codecoverage

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -137,8 +137,7 @@ jobs:
 
       - name: Install thirdparty
         run: |
-          brew install yaml-cpp coreutils swig automake
-          sh tools/install_thirdparty_mac.sh
+          brew install coreutils swig automake
 
       - name: Build Core
         run: |
@@ -345,13 +344,7 @@ jobs:
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v1
         with:
-          files: build/coverage.info
+          files: build/coverage.info,./java/hybridse-sdk/target/site/jacoco/jacoco.xml
           name: coverage
           fail_ci_if_error: true
           verbose: true
-
-      # - name: benchmark
-      #   run: |
-      # cost too much time
-      # bash tools/micro_bench.sh | tee micro_bench_report.txt
-      # bash tools/gen_micro_bench_compare.sh
