--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -122,6 +122,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
         </plugins>
 	</build>
 </project>
