feat: remove swig and automake install

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -137,7 +137,7 @@ jobs:
 
       - name: Install thirdparty
         run: |
-          brew install coreutils swig automake
+          brew install coreutils
 
       - name: Build Core
         run: |
